<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile_picture"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_border"
        android:contentDescription="@string/profile_image_description" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/profile_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_age"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/profile_profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_profession"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/profile_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_city"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/black"
        android:gravity="center" />
</LinearLayout>
